...
      navigationIcon = {
        IconButton(
            onClick = onGoBack,
            modifier = Modifier.testTag(PostDetailsScreenTestTags.BACK_BUTTON)) {
              Icon(
                  imageVector = Icons.Default.ChevronLeft,
                  contentDescription = "Back to Homepage",
                  tint = colorScheme.onBackground,
              )
            }
      },
      actions = {
        IconButton(onClick = onOpenActions) {
...
