...
    }
    previousLiked = likedByCurrentUser
  }
  Icon(
      imageVector =
          if (likedByCurrentUser) Icons.Filled.Favorite else Icons.Outlined.FavoriteBorder,
      contentDescription = "Like status",
      tint = if (likedByCurrentUser) colorScheme.primary else colorScheme.onBackground,
      modifier =
          Modifier.size(iconSize)
              .graphicsLayer {
                scaleX = scale.value
                scaleY = scale.value
...
