...
import com.android.wildex.ui.social.FriendStatus
import com.android.wildex.ui.utils.badges.ProfessionalBadge
import com.android.wildex.ui.utils.refresh.WildexPullToRefreshIndicator

object ProfileScreenTestTags {
  const val GO_BACK = "ProfileScreenGoBack"
  const val SETTINGS = "ProfileScreenSettings"
  const val ACHIEVEMENTS = "ProfileScreenAchievements"
  const val COLLECTION = "ProfileScreenCollection"
  const val MAP = "ProfileScreenMap"
  const val FRIENDS = "ProfileScreenFriends"
  const val PROFILE_NAME = "ProfileScreenName"
  const val PROFILE_USERNAME = "ProfileScreenSurname"
  const val PROFILE_COUNTRY = "ProfileScreenCountry"
  const val PROFILE_DESCRIPTION = "ProfileScreenBio"
  const val FRIEND_REQUEST = "ProfileScreenFriendRequest"
  const val SCROLL = "ProfileScreenScroll"
  const val ACHIEVEMENTS_CTA = "ProfileScreenAchievementsCTA"
  const val MAP_CTA = "ProfileScreenMapCTA"
...
